# AutoPR-Lab

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-pr.yml  ci.yml  security.yml
core/: scanner.py
detectors/: __init__.py  sensitive_files_detector.py
diagrams/: architecture.md
docs/: example-outputs.md  how-to-add-detector.md
examples/invalid-pr/: malicious_detector.py
examples/valid-pr/: sql_injection_detector.py
scripts/: decision_engine.py  publish_public.ps1  validate_detectors.py
src/core/: __init__.py  scanner.py
src/detectors/: api_keys_detector.py  base_detector.py  detector_validator.py  passwords_detector.py
src/utils/: github_api.py  logger.py
tests/: __init__.py  test_detectors.py  test_scanner.py  test_security_gaps.py
utils/: __init__.py  comment_templates.py  github_api.py
